panama-src/genai/shims/ort_genai_c.h

typedef struct OgaResult OgaResult;
typedef struct OgaConfig OgaConfig;
/**
 * \brief Register a callback function to receive log messages from the library. If invoked, the callback will override
 *        the previously set logging destination (e.g. a file or std::cerr).
 * \param[in] callback function pointer to the logging callback function (use nullptr to disable callback and revert to
 *                     the default logging destination - std::cerr).
 * \return OgaResult containing the error message when the callback could not be set, else nullptr.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaSetLogCallback(void (*callback)(const char* string, size_t length));
/**
 * \brief Creates an OgaConfig from the given configuration directory.
 * \param[in] config_path The path to the configuration directory. The path is expected to be encoded in UTF-8.
 * \param[out] out The created config.
 * \return OgaResult containing the error message if the creation of the config failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaCreateConfig(const char* config_path, OgaConfig** out);
/**
 * \brief Clear the list of providers in the given config
 * \param[in] config The config to clear the providers from.
 * \return OgaResult containing the error message if the clearing of the providers failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaConfigClearProviders(OgaConfig* config);
/**
 * \brief Add the provider at the end of the list of providers in the given config if it doesn't already exist
 * if it already exists, does nothing.
 * \param[in] config The config to set the provider on.
 * \param[in] provider The provider to set on the config.
 * \return OgaResult containing the error message if the setting of the provider failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaConfigAppendProvider(OgaConfig* config, const char* provider);
/**
 * \brief Set a provider option
 * \param[in] config The config to set the provider option on.
 * \param[in] provider The provider to set the option on.
 * \param[in] key The key of the option to set.
 * \param[in] value The value of the option to set.
 * \return OgaResult containing the error message if the setting of the provider option failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaConfigSetProviderOption(OgaConfig* config, const char* provider, const char* key, const char* value);
/**
 * \brief Add the model data to load the model from memory. Applications may call OgaConfigRemoveModelData to remove the model data
 *        when it is no longer needed.
 *
 * Note that the model data is expected to be valid at least until the model is created.
 * If using session options such as `session.use_ort_model_bytes_directly`, the model data must remain valid
 * until the OgaModel is destroyed, as the model data will be used directly by the Ort::Session.
 * Please see the relevant ONNX Runtime documentation for more details on this option.
 *
 * \param[in] config The config to add the model data to.
 * \param[in] model_filename The name of the model file as defined in the config.
 * \param[in] model_data The model data to add. The data is expected to be valid at least until the model is created.
 * \param[in] model_data_length The length of the model data.
 * \return OgaResult containing the error message if the addition of the model data failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaConfigAddModelData(OgaConfig* config, const char* model_filename, const void* model_data, size_t model_data_length);
/**
 * \brief Remove model data previously added to the config.
 * \param[in] config The config to remove the model data from.
 * \param[in] model_filename The name of the model file as defined in the config.
 * \return OgaResult containing the error message if the removal of the model data failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaConfigRemoveModelData(OgaConfig* config, const char* model_filename);
/**
 * \brief Overlay JSON on top of config file
 * \param[in] config The config to overlay the JSON on.
 * \param[in] json The JSON to overlay on the config.
 * \return OgaResult containing the error message if the overlaying of the JSON failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaConfigOverlay(OgaConfig* config, const char* json);