panama-src/genai/ffi/genai/ort_genai_c_h.java


    /**
     * {@snippet lang=c :
     * OgaResult *OgaCreateConfig(const char *config_path, OgaConfig **out)
     * }
     */
    public static MemorySegment OgaCreateConfig(MemorySegment config_path, MemorySegment out) {
        var mh$ = OgaCreateConfig.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaCreateConfig", config_path, out);
            }
            return (MemorySegment)mh$.invokeExact(config_path, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaConfigClearProviders {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaConfigClearProviders");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigClearProviders(OgaConfig *config)
     * }
     */
    public static FunctionDescriptor OgaConfigClearProviders$descriptor() {
        return OgaConfigClearProviders.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigClearProviders(OgaConfig *config)
     * }
     */
    public static MethodHandle OgaConfigClearProviders$handle() {
        return OgaConfigClearProviders.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigClearProviders(OgaConfig *config)
     * }
     */
    public static MemorySegment OgaConfigClearProviders$address() {
        return OgaConfigClearProviders.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaConfigClearProviders(OgaConfig *config)
     * }
     */
    public static MemorySegment OgaConfigClearProviders(MemorySegment config) {
        var mh$ = OgaConfigClearProviders.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaConfigClearProviders", config);
            }
            return (MemorySegment)mh$.invokeExact(config);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaConfigAppendProvider {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaConfigAppendProvider");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigAppendProvider(OgaConfig *config, const char *provider)
     * }
     */
    public static FunctionDescriptor OgaConfigAppendProvider$descriptor() {
        return OgaConfigAppendProvider.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigAppendProvider(OgaConfig *config, const char *provider)
     * }
     */
    public static MethodHandle OgaConfigAppendProvider$handle() {
        return OgaConfigAppendProvider.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigAppendProvider(OgaConfig *config, const char *provider)
     * }
     */
    public static MemorySegment OgaConfigAppendProvider$address() {
        return OgaConfigAppendProvider.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaConfigAppendProvider(OgaConfig *config, const char *provider)
     * }
     */
    public static MemorySegment OgaConfigAppendProvider(MemorySegment config, MemorySegment provider) {
        var mh$ = OgaConfigAppendProvider.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaConfigAppendProvider", config, provider);
            }
            return (MemorySegment)mh$.invokeExact(config, provider);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaConfigSetProviderOption {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaConfigSetProviderOption");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigSetProviderOption(OgaConfig *config, const char *provider, const char *key, const char *value)
     * }
     */
    public static FunctionDescriptor OgaConfigSetProviderOption$descriptor() {
        return OgaConfigSetProviderOption.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigSetProviderOption(OgaConfig *config, const char *provider, const char *key, const char *value)
     * }
     */
    public static MethodHandle OgaConfigSetProviderOption$handle() {
        return OgaConfigSetProviderOption.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigSetProviderOption(OgaConfig *config, const char *provider, const char *key, const char *value)
     * }
     */
    public static MemorySegment OgaConfigSetProviderOption$address() {
        return OgaConfigSetProviderOption.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaConfigSetProviderOption(OgaConfig *config, const char *provider, const char *key, const char *value)
     * }
     */
    public static MemorySegment OgaConfigSetProviderOption(MemorySegment config, MemorySegment provider, MemorySegment key, MemorySegment value) {
        var mh$ = OgaConfigSetProviderOption.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaConfigSetProviderOption", config, provider, key, value);
            }
            return (MemorySegment)mh$.invokeExact(config, provider, key, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaConfigAddModelData {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaConfigAddModelData");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigAddModelData(OgaConfig *config, const char *model_filename, const void *model_data, size_t model_data_length)
     * }
     */
    public static FunctionDescriptor OgaConfigAddModelData$descriptor() {
        return OgaConfigAddModelData.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigAddModelData(OgaConfig *config, const char *model_filename, const void *model_data, size_t model_data_length)
     * }
     */
    public static MethodHandle OgaConfigAddModelData$handle() {
        return OgaConfigAddModelData.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigAddModelData(OgaConfig *config, const char *model_filename, const void *model_data, size_t model_data_length)
     * }
     */
    public static MemorySegment OgaConfigAddModelData$address() {
        return OgaConfigAddModelData.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaConfigAddModelData(OgaConfig *config, const char *model_filename, const void *model_data, size_t model_data_length)
     * }
     */
    public static MemorySegment OgaConfigAddModelData(MemorySegment config, MemorySegment model_filename, MemorySegment model_data, long model_data_length) {
        var mh$ = OgaConfigAddModelData.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaConfigAddModelData", config, model_filename, model_data, model_data_length);
            }
            return (MemorySegment)mh$.invokeExact(config, model_filename, model_data, model_data_length);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaConfigRemoveModelData {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaConfigRemoveModelData");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigRemoveModelData(OgaConfig *config, const char *model_filename)
     * }
     */
    public static FunctionDescriptor OgaConfigRemoveModelData$descriptor() {
        return OgaConfigRemoveModelData.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigRemoveModelData(OgaConfig *config, const char *model_filename)
     * }
     */
    public static MethodHandle OgaConfigRemoveModelData$handle() {
        return OgaConfigRemoveModelData.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigRemoveModelData(OgaConfig *config, const char *model_filename)
     * }
     */
    public static MemorySegment OgaConfigRemoveModelData$address() {
        return OgaConfigRemoveModelData.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaConfigRemoveModelData(OgaConfig *config, const char *model_filename)
     * }
     */
    public static MemorySegment OgaConfigRemoveModelData(MemorySegment config, MemorySegment model_filename) {
        var mh$ = OgaConfigRemoveModelData.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaConfigRemoveModelData", config, model_filename);
            }
            return (MemorySegment)mh$.invokeExact(config, model_filename);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaConfigOverlay {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaConfigOverlay");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigOverlay(OgaConfig *config, const char *json)
     * }
     */
    public static FunctionDescriptor OgaConfigOverlay$descriptor() {
        return OgaConfigOverlay.DESC;
    }
